--- a/public/example/1.html
+++ b/public/example/1.html
@@ -4,7 +4,11 @@
 </head>
 <body>
   <div>
-  <h1><a href="http://localhost:3000/example/1.html">First wpis!</a></h1>
+  	<h1><a href="http://localhost:3000/example/1.html">First wpis!</a></h1>
+  	<h2>Less important title</h2>
+  	
+  
+
   <p>It's heaving. Dogs barking, children squealing, yellow cabs fighting for spaces. We meet our guide, Leonardo: "Welcome to Ecuador" and he flashes a brilliant white smile. Welcome indeed.
 
     <img src="http://demotywatory.pl//uploads/201002/1266938363_by_MrGaga_600.jpg" alt="Dupa maryny" />
