--- a/public/example/index.html
+++ b/public/example/index.html
@@ -9,19 +9,12 @@
   <div>
     <h1 class="page-title">Archiwa kategorii: <span>Inspiracje</span></h1>
     <h1><a href="http://localhost:3000/example/1.html">Pierwszy wpis!</a></h1>
-    <h1>The first entry!</h1>
+    <h2>Less important header!</h2>
     <p>It's heaving. Dogs barking, children squealing, yellow cabs fighting for spaces. We meet our guide, Leonardo: "Welcome to Ecuador" and he flashes a brilliant white smile. Welcome indeed. </p>
     <br>
     <hr>
   </div>
 
-  <div>
-    <h1><a href="http://localhost:3000/example/1.html">Drugi wpis!</a></h1>
-    <h1>The second entry!</h1>
-    <p>Ruby Readability is a tool for extracting the primary readable content of a webpage. It is a Ruby port of arc90's readability project.</p>
-    <br>
-    <hr>
-  </div>
 
   <a href="http://localhost:3000/example/1.html">Pierwszy wpis!</a>
 
@@ -29,6 +22,8 @@
   <a href="http://localhost:3000/">Pierwszy wpis!</a>
   <a href="http://localhost:3000/example/lw1.html">Pierwszy wpis!</a>
   <a href="http://localhost:3000/example/popiel1.html">Pierwszy wpis!</a>
+  <a href="http://localhost:3000/example/img.jpg">Pierwszy wpis!</a>
+  <a href="http://localhost:3000/example/dupamaryni.html">Pierwszy wpis!</a>
 
 </body>
 
