--- a/public/example/1.html
+++ b/public/example/1.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-  <title>dupa</dupa>
+  <title>dupa</title>
 </head>
 <body>
   <div>
@@ -16,7 +16,12 @@
 We're 9,000ft above sea level in the second highest city in the world. It's hot, the sun is bright and we need to acclimatise - take it slow and drink lots of liquids. A local beer calls for attention, but a freshly squeezed blackberry juice is handed to me. Oh!
 
 Quito is a long, narrow city sprawling 30 miles through the Andes valley. There's mixture of old and new. Touches of Spanish influence on every corner, and from our Hilton hotel we get a fabulous view - houses crammed on the slopes; the twin spires of the ancient neo-Gothic Basilica, and the statue of the Apocalyptic Virgin (Winged Madonna) on the summit of the Panecillo Hill. It's like a mini Rio in pastel shades.
+<a href="http://localhost:3000/example/2.html">
 
+
+	Pierwszy wpis!
+
+</a>
 We stay awake for a spectacular sunset when the hills set on fire, changing hues minute by minute. Darkness falls, the night-city awakes and sleep beckons.
 
 A long, but great first day. More installments to follow.</p>
